--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family:Arial, Helvetica, sans-serif;
 }
+body{
+    height: 1000px;
+}
 .header{
     background-color: #CE0505;
     height: 80px;
