--- a/styles.css
+++ b/styles.css
@@ -55,10 +55,20 @@ letter-spacing: 0px;
 }
 
 .sec2-filter{
-    color: #192F60;
+    color: #192f60;
     width: 260px;
     height: 682px;
     margin: auto 30px;
     padding: 20px 20px;
     box-shadow: 0px 3px 6px #9e6060;    
 }
+.sec2-filter h2{
+    margin-bottom: 10px;
+}
+.sec2-filter .filter-location{
+    width: 100%;
+    height: 4vw;
+    margin: 6px;
+}
+
+
