--- a/styles.css
+++ b/styles.css
@@ -65,10 +65,20 @@ letter-spacing: 0px;
 .sec2-filter h2{
     margin-bottom: 10px;
 }
+label{
+    font-size: 18px;
+}
 .sec2-filter .filter-location{
     width: 100%;
-    height: 4vw;
+    height: 30px;
     margin: 6px;
 }
-
-
+.select-cuisine{
+    margin: 4px 6px;
+}
+.cost-filter{
+    margin: 4px 6px;
+}
+.sort-filter{
+    margin: 4px 6px;
+}
