--- a/filter-result/style2.css
+++ b/filter-result/style2.css
@@ -1,15 +1,12 @@
 * {
   margin: 0;
   box-sizing: border-box;
-}
+  color: #192F60;
 
-body {
-  font-family: "Poppins";
-  background-color: #fbfbfb;
 }
 .navbar {
   background-color: #ce0505;
-  padding: 20px 30px;
+  padding: 20px 20px;
   display: flex;
   justify-content: center;
 }
