--- a/filter-result/style.css
+++ b/filter-result/style.css
@@ -1,8 +1,7 @@
 * {
   margin: 0;
   box-sizing: border-box;
-  color: #192F60;
-
+  color: #192f60;
 }
 
 .navbar {
@@ -22,7 +21,7 @@
   border-radius: 50%;
   font-size: 35px;
 }
-.navbar-brand:hover{
+.navbar-brand:hover {
   color: #ce0505;
   cursor: pointer;
 }
@@ -44,50 +43,48 @@
   color: #eb2929;
   background-color: white;
 }
-.main-row{
+.main-row {
   margin-bottom: 40px;
 }
-.filter-sort{
-    box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.2);
-    padding: 40px;
+.filter-sort {
+  box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.2);
+  padding: 40px;
 }
 .form-check-input:checked {
   background-color: #ce0505;
   border-color: #ce0505;
 }
-.results{
-    box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.2);
-    margin-left: 60px;
-    margin-bottom: 60px;
-    
-
+.results {
+  box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.2);
+  margin-left: 60px;
+  margin-bottom: 60px;
 }
-.apply-btn{
+.apply-btn {
   background-color: #ce0505;
   color: aliceblue;
   width: 100%;
 }
 
-.foodimg{
+.foodimg {
   height: 120px;
   width: 140px;
   border-radius: 20px;
 }
 
-.row ul li{
+.row ul li {
   margin: 10px;
 }
-.row ul li a{
-  color: #192F60;
+.row ul li a {
+  color: #192f60;
   border: solid 2px rgba(128, 128, 128, 0.416);
   border-radius: 8px;
 }
 
-.active > .page-link, .page-link.active {
+.active > .page-link,
+.page-link.active {
   background-color: grey;
   border: solid 2px rgba(128, 128, 128, 0.416);
 }
-
 
 @media only screen and (max-width: 372px) {
   .login-btn {
@@ -101,5 +98,56 @@
   .results {
     margin: 20px 0;
   }
-  
+  .page-link{
+    font-size: 12px;
+  }
+  .row ul li {
+    margin: 5px;
+  }
+}
+@media only screen and (max-width: 404px) {
+  .test {
+    margin-left: 30px;
+  }
+  .row ul li {
+    margin: 3px;
+  }
+}
+
+.filtersButton {
+  width: 100%;
+  display: none;
+  justify-content: space-between;
+  padding: 16px 21px 14px 21px;
+  font-size: 16px;
+  font-weight: 600;
+  background-color: white;
+  border: 1px solid #e0e0e0;
+  margin-bottom: 7px;
+}
+.arrow {
+  border-right: 2px solid #8c96ab;
+  border-bottom: 2px solid #8c96ab;
+  height: 10px;
+  width: 10px;
+}
+
+.arrowDown {
+  transform: rotate(45deg);
+}
+
+.arrowUp {
+  transform: translateY(7px) rotate(-135deg);
+}
+.noDisplay{
+  display: none !important;
+}
+@media (width <= 769px) {
+  .filtersButton {
+    margin-bottom: 18px;
+    margin-left: 24px;
+    margin-right: 24px;
+    width: 90vw;
+    display: flex;
+  }
 }
