--- a/search-home/style.css
+++ b/search-home/style.css
@@ -104,18 +104,22 @@ margin: auto;
 }
 
 .card {
-    width: 360px;
-    height: 160px;
     background-color: white;
     border: none;
     box-shadow: 1px 1px 10px white;
     overflow: hidden;
     transition: box-shadow .2s;
-    margin: 0 10px 10px 0;
+    margin: 10px ;
 }
 
 .card:hover {
     box-shadow: 1px 1px 10px black;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 820px) {
+    .nav-menu {
+        display: none;
+    }
+  }
 
