--- a/search-home/style.css
+++ b/search-home/style.css
@@ -110,6 +110,7 @@ margin: auto;
     overflow: hidden;
     transition: box-shadow .2s;
     margin: 10px ;
+    padding: 20px;
 }
 
 .card:hover {
@@ -120,6 +121,9 @@ margin: auto;
 @media only screen and (max-width: 820px) {
     .nav-menu {
         display: none;
+    }
+    #header-img {
+        height: 540px;
     }
   }
 
