--- a/search-home/style.css
+++ b/search-home/style.css
@@ -1,160 +1,236 @@
 html,
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    background-color: #FBFBFB;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  background-color: #fbfbfb;
 }
 
 #header-img {
-    position: relative;
-    width: 100vw;
-    height: 480px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url('/images/bg.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  position: relative;
+  width: 100vw;
+  height: 480px;
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.6)
+    ),
+    url("/images/bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 header {
-    width: 120vw;
-    height: 60px;
+  width: 120vw;
+  height: 60px;
 }
 
 .nav-menu {
-    width: 60vw;
-    height: 60px;
-    margin-top: 15px;
-    /* position: fixed; */
+  width: 60vw;
+  height: 60px;
+  margin-top: 15px;
+  /* position: fixed; */
 }
 
 .navigation-link-p {
-    border: solid 0px white;
-    transition: border-bottom .1s ease;
-    cursor: pointer;
+  border: solid 0px white;
+  transition: border-bottom 0.1s ease;
+  cursor: pointer;
 }
 
 .navigation-link-p:hover {
-    border-bottom: 3px solid white;
+  border-bottom: 3px solid white;
 }
-.navigation-link-btn{
-    height: 36px;
-    width: 181px;
-    font-size: 16px;
-    background: transparent;
-    border: 2px solid white;
-    font-weight: bolder;
-    color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    transition: border-color .1s ease;
-    transition: color .1s ease;
-
+.navigation-link-btn {
+  height: 36px;
+  width: 181px;
+  font-size: 16px;
+  background: transparent;
+  border: 2px solid white;
+  font-weight: bolder;
+  color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  transition: border-color 0.1s ease;
+  transition: color 0.1s ease;
 }
-.navigation-link-btn:hover{
-    color: rgb(85, 59, 59);
-border: none;
-    background-color: wheat;
+.navigation-link-btn:hover {
+  color: rgb(85, 59, 59);
+  border: none;
+  background-color: wheat;
 }
 .logo-bottom {
+  display: block;
+  font-weight: bolder;
+  color: white;
+  text-align: center;
+  font-size: 36px;
+  margin: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.logo {
+  width: 147px;
+  height: 147px;
+  color: #eb2929;
+  background-color: white;
+  font-size: 85px;
+  font-weight: 700;
+  text-align: center;
+  border-radius: 50%;
+  margin: auto;
+  margin-top: 60px;
+}
+.search-box {
+  color: #636f88;
+  width: 245px;
+  height: 60px;
+  border: none;
+  padding-left: 20px;
+  margin: auto 20px;
+  outline: none;
+  font-weight: bold;
+  font-size: 16px;
+}
+.search-box2 {
+  color: #636f88;
+  width: 477px;
+  height: 60px;
+  border: none;
+  padding-left: 40px!important;
+  margin: auto 20px;
+  outline: none;
+  font-weight: bold;
+  font-size: 16px;
+}
+/* for search icon */
+.search-box2-div {
+    position: relative;
+}
+  
+.search-box2-div i{
+    position: absolute;
+    left: 35px;
+    top: 25px;
+    color: red;
+}
+/* search icon done here */
+#second-section {
+  margin: 50px 0 50px 0;
+}
+
+.second-section-title {
+  color: #192f60;
+  font-size: 30px;
+  font-weight: 600;
+}
+.second-section-title-para {
+  color: #8c96ab;
+}
+
+.custum-card {
+  background-color: white;
+  border: none;
+  box-shadow: 0px 3px 6px #00000029;
+  overflow: hidden;
+  transition: box-shadow 0.2s;
+  margin: 15px;
+  /* padding: 20px; */
+  width: 360px;
+  height: 160px;
+}
+.custum-card > div > img {
+  width: 100%;
+  display: block;
+  margin-left: -12px;
+}
+
+.custum-card:hover {
+  box-shadow: 1px 1px 10px black;
+  cursor: pointer;
+}
+.card-info-div {
+  padding: 30px 10px 0 0;
+}
+.card-title {
+  font-size: 18px;
+  color: #192f60;
+  margin-bottom: 4px;
+}
+.card-para {
+  font-size: 14px;
+  color: #8c96ab;
+}
+
+@media only screen and (max-width: 1200px) {
+  .custum-card {
+    width: 93%;
+  }
+}
+@media only screen and (max-width: 992px) {
+  .logo {
+    width: 137px;
+    height: 137px;
+    color: #eb2929;
+    background-color: white;
+    font-size: 78px;
+    font-weight: 700;
+    text-align: center;
+    border-radius: 50%;
+    margin: auto;
+    margin-top: 50px;
+  }
+  .search-box {
+    width: 400px;
+    height: 60px;
+    padding-left: 20px;
+    margin: auto 20px;
+    font-weight: bold;
+    font-size: 16px;
+  }
+  .search-box2 {
+    width: 400px;
+    height: 60px;
+    padding-left: 20px;
+    margin: auto 20px;
+    font-weight: bold;
+    font-size: 16px;
+  }
+  .logo-bottom {
     display: block;
     font-weight: bolder;
     color: white;
     text-align: center;
-    font-size: 36px;
+    font-size: 30px;
     margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.header-flex {
-    /* margin-top: 100px; */
-}
-.logo{
-    width: 147px;
-height: 147px;
-color: #EB2929;
-background-color: white;
-font-size: 85px;
-font-weight: 700;
-text-align: center;
-border-radius: 50%;
-margin: auto;
-margin-top: 60px;
-}
-.search-box {
-    color: #636F88;
-    width: 245px;
-    height: 60px;
-    border: none;
-    padding-left: 20px;
-    margin: auto 20px;
-    outline: none;
-    font-weight: bold;
-    font-size: 16px;
-}
-.search-box2 {
-    color: #636F88;
-    width: 477px;
-    height: 60px;
-    border: none;
-    padding-left: 20px;
-    margin: auto 20px;
-    outline: none;
-    font-weight: bold;
-    font-size: 16px;
-}
-
-#second-section {
-    margin: 50px 0 50px 0;
-}
-
-.second-section-title{
-    color: #192F60;
-    font-size: 30px;
-    font-weight: 600;
-}
-.second-section-title-para{
-color: #8C96AB;
-}
-
-.custum-card {
-    background-color: white;
-    border: none;
-    box-shadow: 0px 3px 6px #00000029;    overflow: hidden;
-    transition: box-shadow .2s;
-    margin: 15px;
-    /* padding: 20px; */
-    width: 360px;
-    height: 160px;
-}
-.custum-card > div > img{
-    width: 100%;
-    display: block;
-    margin-left: -12px;
-}
-
-.custum-card:hover {
-    box-shadow: 1px 1px 10px black;
-    cursor: pointer;
-}
-.card-info-div{
-    padding: 30px 0 0 0;
-}
-.card-title{
-    font-size: 18px;
-    color: #192F60;
-    margin-bottom: 4px;
-}
-.card-para{
-    font-size: 14px;
-    color: #8C96AB;
+  }
 }
 @media only screen and (max-width: 820px) {
-    .nav-menu {
-        display: none;
-    }
-    #header-img {
-        height: 540px;
-    }
+  .nav-menu {
+    display: none;
+  }
+  #header-img {
+    height: 540px;
+  }
+  .logo {
+    margin-top: 10px;
+  }
+}
+@media only screen and (max-width: 540px) {
+  .search-box, .search-box2 {
+    margin-bottom: 20px;
+    width: 90%;
+
   }
 
+  .d-flex {
+    display: block !important;
+  }
+}
+@media only screen and (max-width: 447px) {
+    .search-box, .search-box2 {
+      width: 90%;
+  
+    }
+  }
