--- a/netfilix-homepage/style.css
+++ b/netfilix-homepage/style.css
@@ -1,4 +1,265 @@
-* {
+*{
+    box-sizing: border-box;
+}
+ body {
+    padding: 0;
+    margin: 0;
+    font-family: "Segoe UI";
+ }
+ 
+ img {
+    max-width: 100%;
+ }
+ 
+ section {
+    border-top: 8px solid #222;
+    padding-top: 50px;
+    padding-bottom: 40px;
+    background-color: #000000;
+ }
+ 
+ section h2 {
+    font-size: 55px;
+    color: #fff;
+    font-weight: bold;
+ }
+ 
+ section p {
+    font-size: 22px;
+    color: #fff;
+ }
+ 
+ h1 {
+    color: #fff;
+    font-size: 80px;
+ }
+ 
+ h3,
+ h5 {
+    color: #fff;
+ }
+ 
+ .text-common {
+    color: #757575;
+ }
+ 
+ .row {
+    margin: 0px;
+ }
+ 
+ .navbar {
+    position: absolute;
+    width: 100%;
+ }
+ 
+ .form-select {
+    background-color: #333;
+    border: 1px solid #757575;
+    color: #757575;
+    height: 52px;
+ }
+ 
+ a.navbar-brand {
+    color: #e50914 !important;
+    font-size: 44px;
+    font-weight: bold;
+ }
+ 
+ .bg-img {
+    background-image: url(https://assets.nflxext.com/ffe/siteui/vlv3/935156fb-9579-4fc2-ad94-70680402b8ef/3689d1b9-def2-446b-bc6c-ba159a4469f8/IN-en-20230109-popsignuptwoweeks-perspective_alpha_website_small.jpg);
+    height: 700px;
+ }
+ 
+ .layer {
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+ }
+ 
+ .top-sign-in {
+    height: 34px;
+    margin-top: 10px;
+    padding-top: 5px;
+ }
+ 
+ .input-group-text {
+    font-size: 28px;
+    background-color: #e50914;
+    color: #fff;
+    border: 0px;
+    cursor: pointer;
+ }
+ 
+ .btn-check:focus+.btn,
+ .btn:focus {
+    box-shadow: none;
+ }
+ 
+ .main-search input {
+    height: 70px;
+ }
+ 
+ .faq .btn {
+    width: 100%;
+    height: 72px;
+    background-color: #303030;
+    font-size: 30px;
+    padding-top: 12px;
+    text-align: left;
+    padding-left: 30px;
+    margin-bottom: 10px;
+    border-radius: 0px;
+ }
+ 
+ .multi-collapse.show {
+    margin-bottom: 10px;
+ }
+ 
+ .faq .card {
+    background-color: #303030;
+    font-size: 26px;
+    color: #fff;
+    padding-left: 30px;
+ }
+ 
+ footer {
+    background-color: #000000;
+    padding-top: 40px;
+    border-top: 8px solid #222;
+ }
+ 
+ footer ul {
+    list-style-type: none;
+ }
+ 
+ footer ul li {
+    color: #757575;
+    margin-bottom: 15px;
+ }
+ 
+ footer a {
+    text-decoration: none;
+    color: #757575;
+ }
+ 
+ footer a:hover {
+    color: #757575;
+    text-decoration: underline;
+ }
+ 
+ @media(min-width: 1200px) {
+    .main-search .input-group {
+       width: 60%;
+       margin: 0 auto;
+    }
+ }
+ 
+ @media(max-width: 800px) {
+    .layer h1 {
+       font-size: 60px;
+    }
+ }
+ 
+ @media(max-width: 768px) {
+    .reverse {
+       flex-direction: column-reverse;
+    }
+ }
+ 
+ @media(max-width: 612px) {
+    .layer h1 {
+       font-size: 50px;
+    }
+    .layer h5 {
+       font-size: 20px;
+    }
+    section h2 {
+       font-size: 40px;
+    }
+    .main-search input,
+    .input-group-text {
+       width: 100% !important;
+       border-radius: 0px;
+       border: 0px;
+    }
+    .input-group-text {
+       margin-top: 5px;
+    }
+    .faq .btn {
+       font-size: 20px;
+       height: auto;
+       padding-top: 5px;
+       padding-left: 10px;
+    }
+    .faq .card {
+       font-size: 16px;
+       padding-left: 10px;
+    }
+    section p {
+       font-size: 18px;
+    }
+ }
+ 
+ @media(max-width: 515px) {
+    .layer h1 {
+       font-size: 40px;
+    }
+    .layer h5 {
+       font-size: 16px;
+    }
+    .bottom-search p {
+       padding-left: 10px;
+       padding-right: 10px;
+    }
+    a.navbar-brand {
+       font-size: 32px;
+    }
+    .form-select {
+       height: 40px;
+    }
+    .top-sign-in {
+       margin-top: 3px;
+    }
+    .px-5 {
+       padding-right: 10px!important;
+       padding-left: 10px!important;
+    }
+    .layer h3 {
+       font-size: 20px;
+    }
+    .layer h5 {
+       font-size: 14px;
+    }
+ }
+ 
+ @media(max-width:425px) {
+    .layer h1 {
+       font-size: 34px;
+    }
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ /* * {
   box-sizing: border-box;
   font-family: "Segoe UI";
 }
@@ -32,14 +293,8 @@
   color: white;
   width: 84px;
   margin-right: 20px;
-  position: relative;
 }
-.fa-globe {
-  position: absolute;
-  left: 35px;
-  top: 25px;
-  color: red;
-}
+
 .lang-dropdown:hover {
   border: solid 1px;
   border-radius: 5px;
@@ -68,7 +323,7 @@
   font-size: 14px;
 }
 
-/* nav over */
+
 main {
   width: 50%;
   color: white;
@@ -105,10 +360,9 @@ main > div > .btn2 {
 main > div > .btn2 span {
   font-size: 23px;
 }
-/* header over */
 .content1, .content2, .content3, .content4{
     background-color: black;
-    border-bottom: solid 8px grey;
+    border-bottom: solid 8px #222222;
 }
 .container{
     margin: auto;
@@ -119,13 +373,24 @@ main > div > .btn2 span {
 }
 .container > div > h1{
     color: white;
-    margin-top: 100px;
-    font-size: 58px;
+    margin-top: 120px;
+    font-size: 50px;
+    font-weight: 700;
     
 }
 .container > div > p{
     color: white;
-    margin-top: 30px;
-    font-size: 28px;
+    margin-top: 20px;
+    font-size: 24px;
     
 }
+.content2 > .container > div > .content-img{
+    margin-left: -100px;
+}
+.content3 > .container > div > .content-img{
+    margin-top: 25px;
+}
+.content4 > .container > div > .content-img{
+    margin-top: 35px;
+} */
+
