--- a/netfilix-homepage/style.css
+++ b/netfilix-homepage/style.css
@@ -4,7 +4,7 @@
  body {
     padding: 0;
     margin: 0;
-    font-family: "Segoe UI";
+    font-family: "noto sans";
  }
  
  img {
@@ -18,50 +18,18 @@
     background-color: #000000;
  }
  
- section h2 {
-    font-size: 55px;
-    color: #fff;
-    font-weight: bold;
- }
- 
- section p {
-    font-size: 22px;
+ p, h1, h2, h3, h5 {
     color: #fff;
  }
- 
- h1 {
-    color: #fff;
-    font-size: 80px;
- }
- 
- h3,
- h5 {
-    color: #fff;
- }
- 
- .text-common {
-    color: #757575;
- }
- 
- .row {
-    margin: 0px;
- }
- 
+
  .navbar {
     position: absolute;
     width: 100%;
  }
- 
- .form-select {
-    background-color: #333;
-    border: 1px solid #757575;
-    color: #757575;
-    height: 52px;
- }
- 
- a.navbar-brand {
+
+ .navbar-brand {
     color: #e50914 !important;
-    font-size: 44px;
+    font-size: 52px;
     font-weight: bold;
  }
  
@@ -71,7 +39,7 @@
  }
  
  .layer {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -79,15 +47,44 @@
     width: 100%;
     height: 100%;
  }
- 
+ .form-select-menu {
+   height: 42px;
+   width: 110px;
+   background:transparent;
+   padding: 9px;
+}
+.form-select-menu > option{
+   background-color: grey;
+}
  .top-sign-in {
-    height: 34px;
-    margin-top: 10px;
+   height: 42px;
+   width: 120px;
     padding-top: 5px;
+    font-size: 18px;
+    background-color: #e50914;
  }
- 
+ .top-sign-in:hover {
+  color: #000000;
+  font-weight: 600;
+    background-color: #e50914;
+ }
+ .headerTitleOne{
+    font-size: 72px;
+   }
+   .headerTitleTwo{
+      font-size: 42px;
+   }
+   .headerTitleThree{
+    font-size: 22px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+
+ }
+ .main-search input {
+   height: 60px;
+}
  .input-group-text {
-    font-size: 28px;
+    font-size: 24px;
     background-color: #e50914;
     color: #fff;
     border: 0px;
@@ -99,9 +96,7 @@
     box-shadow: none;
  }
  
- .main-search input {
-    height: 70px;
- }
+ 
  
  .faq .btn {
     width: 100%;
@@ -218,7 +213,7 @@
     a.navbar-brand {
        font-size: 32px;
     }
-    .form-select {
+    .form-select-menu {
        height: 40px;
     }
     .top-sign-in {
