--- a/netfilix-homepage/style.css
+++ b/netfilix-homepage/style.css
@@ -1,5 +1,12 @@
-* {
-  box-sizing: border-box;
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 body {
   padding: 0;
@@ -34,10 +41,14 @@ h5 {
   color: #e50914 !important;
   font-size: 52px;
   font-weight: bold;
+  width: 190px;
+}
+.nav-logo{
+   width:100%;
 }
 
 .bg-img {
-  background-image: url(https://assets.nflxext.com/ffe/siteui/vlv3/935156fb-9579-4fc2-ad94-70680402b8ef/3689d1b9-def2-446b-bc6c-ba159a4469f8/IN-en-20230109-popsignuptwoweeks-perspective_alpha_website_small.jpg);
+  background-image: url(images/back.jpg);
   height: 700px;
 }
 
@@ -86,7 +97,7 @@ h5 {
   margin-bottom: 20px;
 }
 .main-search input {
-  height: 60px;
+  height: 55px;
 }
 .input-group-text {
   font-size: 24px;
@@ -102,6 +113,9 @@ h5 {
 .sec-p{
    font-size: 26px;
 }
+.plusIcon{
+  float: right;
+}
 .faq-h2{
    font-size: 50px;
    font-weight: 500;
@@ -114,10 +128,13 @@ h5 {
   padding-top: 12px;
   text-align: left;
   padding-left: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   border-radius: 0px;
 }
-
+.btn-check:focus+.btn, .btn:focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgb(0 0 0 / 25%);
+}
 .multi-collapse.show {
   margin-bottom: 10px;
 }
@@ -132,6 +149,7 @@ h5 {
    font-size: 18px;
    margin-top: 20px;
 }
+
 footer {
   background-color: #000000;
   padding-top: 40px;
@@ -195,6 +213,9 @@ footer a:hover {
   .reverse {
     flex-direction: column-reverse;
   }
+  .textCenter768{
+    text-align: center;
+  }
 }
 
 @media (max-width: 612px) {
@@ -215,6 +236,7 @@ footer a:hover {
   }
   .input-group-text {
     margin-top: 5px;
+    justify-content: center;
   }
   .faq .btn {
     font-size: 20px;
@@ -229,6 +251,14 @@ footer a:hover {
   section p {
     font-size: 18px;
   }
+  .plusIcon{
+    height: 28px;
+    height: 28px;
+  }
+}@media (max-width: 538px) {
+  .navbar-brand {
+  width: 140px;
+}
 }
 
 @media (max-width: 515px) {
@@ -266,5 +296,29 @@ footer a:hover {
 @media (max-width: 425px) {
   .layer h1 {
     font-size: 34px;
+  }
+  .navbar-brand {
+    width: 100px;
+  }
+}
+@media (max-width: 318px) {
+  .footerContainer {
+    margin-left: -20px;
+  }
+}
+
+@media (max-width: 860px) {
+  .headerTitleOne {
+    font-size: 60px;
+    margin-top: 100px;
+  }
+  .headerTitleTwo{
+    font-size: 40px;
+  }
+  .headerTitleThree{
+    font-size: 20px;
+  }
+  .form-select-menu{
+    font-size: 16px !important;
   }
 }
