--- a/wheather-app/style.css
+++ b/wheather-app/style.css
@@ -1,3 +1,78 @@
-container{
-    background: url('https://wallpapercave.com/wp/wp5136678.jpg');
+* {
+  box-sizing: border-box;
+}
+
+body,
+html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  color: rgba(255, 255, 255, 0.726);
+}
+
+.bg {
+  /* The image used */
+  background-image: url("https://wallpapercave.com/wp/wp5136678.jpg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.layer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(10, 10, 10, 0.568);
+  position: relative;
+}
+.card {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.486);
+  border-radius: 40px;
+  height: 250px;
+  padding: 20px;
+  text-align: center;
+}
+#locationInput {
+  border: none;
+  height: 25px;
+  width: 170px;
+  border-radius: 40px;
+  background-color: rgba(128, 128, 128, 0.253);
+  color: rgba(255, 255, 255, 0.644);
+  padding: 12px;
+}
+#locationInput:focus {
+  outline: none;
+}
+#btnId {
+  border: none;
+  height: 25px;
+  border-radius: 40px;
+  background-color: rgba(128, 128, 128, 0.253);
+  cursor: pointer;
+  transform: rotate(270deg);
+  color: rgba(255, 255, 255, 0.658);
+}
+#btnId:focus {
+  outline: none;
+}
+.dataSec{
+text-align: left;
+}
+#locationHead{
+  font-size: 20px;
+}
+#temp{
+  font-size: 29px;
+}
+P{
+  font-size: 14px;
+  margin: 6px;
 }
