--- a/basic-react-assignment/basic-react-assignment-app/src/styles/App.css
+++ b/basic-react-assignment/basic-react-assignment-app/src/styles/App.css
@@ -1,4 +1,3 @@
-
 html,
 body {
   margin: 0;
@@ -8,4 +7,10 @@ body {
   background-color: #fbfbfb;
 }
 
-
+body {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+body::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
